homePage layout bug fixed & add swiper

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -73,7 +73,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: #fff;
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: 'Noto Sans TC', Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -83,6 +83,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 
